# distributed_player

./: readme.md
client/: Cargo.toml  node_config.toml
client/media/cfg/: playlist.toml
client/src/: config.rs  main.rs  player.rs  playlist.rs
master/client/: .env  env.d.ts  index.html  package-lock.json  package.json
master/client/src/: App.vue  main.ts
master/client/src/assets/: styles.css
master/client/src/components/: AdvertizementInput.vue  AppChooseFileDialog.vue  AppConfirmDialog.vue  AppFileField.vue  AppFolderEntryTreeNode.vue  AppNotification.vue  EditConfig.vue  NodeList.vue  PlaylistAdvertizement.vue  PlaylistMusic.vue  PlaylistMusicScheduleInput.vue  PlaylistPageMenu.vue  PlaylistWorkingHours.vue  PlaylistWorkingHoursScheduleInput.vue
master/client/src/locales/: en-us.json  ru-ru.json
master/client/src/models/: CollapsableFolderEntry.ts  FolderEntry.ts  Playlist.ts  PlaylistPage.ts
master/client/src/router/: index.ts
master/client/src/services/: authService.ts  fileService.ts  playlistService.ts
master/client/src/stores/: app.ts
master/client/src/utils/: server.ts
master/client/src/views/: LoginView.vue  PlaylistEditView.vue  PlaylistsView.vue
master/server/: .gitignore  Cargo.toml  node_config.toml
master/server/media/cfg/: playlist.toml
master/server/src/: auth_api.rs  config.rs  file_api.rs  main.rs  password.rs  playlist.rs  playlist_api.rs  toml_file.rs
