[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing-subscriber = "0.3"
serde_derive = "1.0"
toml = "0.8"
rpassword = "7.3"
hex = "0.4.3"
password-hash = "0.5"
pbkdf2 = "0.12"
sha2 = "0.10"
log = "0.4.22"
log4rs = "1.3.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
time = "0.3.36"